--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ sha2 = "0.8.0"
 snafu = "0.6.0"
 ssb-legacy-msg-data = { git="https://github.com/sunrise-choir/legacy-msg-data", version = "0.1.1" }
 ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}
-ssb-verify-signatures = {path = "../ssb-verify-signatures"}
+ssb-verify-signatures = {git = "https://github.com/sunrise-choir/ssb-verify-signatures"}
 
