--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "ssb-validate"
 version = "1.0.1"
 authors = ["Piet Geursen <pietgeursen@gmail.com>"]
 edition = "2018"
+description = "Verify Secure Scuttlebutt (SSB) hash chains (in parallel)"
+repository = "https://github.com/sunrise-choir/ssb-validate"
+documentation = "https://docs.rs/ssb-validate/"
 license = "AGPL-3.0"
 
 [dependencies]
