--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ license = "AGPL-3.0"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.8.0"
 snafu = "0.6.0"
-ssb-legacy-msg-data = "0.1.2"
+#ssb-legacy-msg-data = "0.1.2"
+ssb-legacy-msg-data = { path = "../ssb-legacy-msg-data" }
 ssb-multiformats = "0.4.0" 
 rayon = "1.2.0"
 
