--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ documentation = "https://docs.rs/ssb-validate/"
 license = "AGPL-3.0"
 
 [dependencies]
+lazy_static = "1.4.0"
+regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.8.0"
 snafu = "0.6.0"
