--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.8.0"
 snafu = "0.6.0"
-ssb-legacy-msg-data = { git = "https://github.com/sunrise-choir/legacy-msg-data" }
-ssb-multiformats = "0.4.0" 
+ssb-legacy-msg-data = "0.1.3"
+ssb-multiformats = "0.4.1"
 rayon = "1.2.0"
 
 [dev-dependencies]
 criterion = "0.3"
-flumedb = "0.1.3"
+flumedb = "0.1.5"
 
 [[bench]]
 name = "bench"
